[gd_scene load_steps=6 format=3 uid="uid://bkeyud6kufkrq"]

[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_ll3oq"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_v3i2h"]
[ext_resource type="Texture2D" uid="uid://cme7gmlloqjak" path="res://icon.svg" id="3_gi0uq"]
[ext_resource type="Script" path="res://scenes/cursor_controller.gd" id="4_y2ata"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ngpl"]
radius = 41.0
height = 156.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_v3i2h")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gi0uq")

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("1_ll3oq")

[node name="Timer" type="Timer" parent="Spawner"]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="Cursor" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_4ngpl")
script = ExtResource("4_y2ata")

[node name="Sprite2D" type="Sprite2D" parent="Area2D/Cursor"]
texture = ExtResource("3_gi0uq")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="Area2D/Cursor" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D/Cursor" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="Area2D/Cursor" method="_on_area_2d_input_event"]
